--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <title>"My Family book"</title>
 <link rel="stylesheet" href="style.css">
         <script src="main.js"></script>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
-<audio id="audio"
-src="http://hatlearning.000webhostapp.com/background_sound.mp3"> </audio>
+<audio id="audio"src="s1.mp3"> </audio>
 <p id="first">
 My Family Book </p>
+<img id="gi1" src="love.gif">
+<img id="gi2" src="love.gif">
+<br>
 <img id="album"
-src="images of my family/9780358193302.gif">
+src="9780358193302.gif">
 
     <p id="1">
         My family book </p>
